--- a/tiny-compiler/TinyCompiler.csproj
+++ b/tiny-compiler/TinyCompiler.csproj
@@ -47,8 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Parser.cs" />
     <Compile Include="Controller\Scanner.cs" />
+    <Compile Include="Model\ExpNode.cs" />
+    <Compile Include="Model\ParserTree.cs" />
+    <Compile Include="Model\StatementNode.cs" />
     <Compile Include="Model\Token.cs" />
+    <Compile Include="Model\TreeNode.cs" />
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
